CSS issue fixed. When applying category titles that require 2 lines, the second line of text is cut off half-way.

--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.rtl.css
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.rtl.css
@@ -480,7 +480,7 @@ a.eu-cookie-privacyinfo-tag{color:#B80709 !important;text-decoration:underline;}
 .home-page-category-grid a{color:#555;font-size:1.2em;font-weight:700;}
 .home-page-category-grid .item-box{float:right;text-align:center;vertical-align:text-top;}
 .home-page-category-grid .category-item{text-align:center;margin:10px;width:145px;height:180px;border:1px solid #eee;}
-.home-page-category-grid .category-item .title{text-align:center;font-weight:700;font-size:.9em;display:block;overflow:hidden;height:1.8em;padding:5px;}
+.home-page-category-grid .category-item .title{text-align:center;font-weight:700;font-size:.9em;display:block;overflow:hidden;padding:5px;}
 .home-page-category-grid .category-item .picture{text-align:center;padding:10px 0;}
 .bestsellers{margin-left:auto;margin-right:auto;width:auto;}
 .bestsellers .title{padding:10px 0 10px 10px;margin:0 10px 0 0;font-weight:700;text-transform:uppercase;font-size:1.1em;color:#3a3a3a;text-align:center;}
@@ -543,7 +543,7 @@ a.eu-cookie-privacyinfo-tag{color:#B80709 !important;text-decoration:underline;}
 .sub-category-grid a,.manufacturer-grid a{color:#555;font-size:1.2em;font-weight:700;}
 .sub-category-grid .item-box,.manufacturer-grid .item-box{float:right;text-align:center;vertical-align:text-top;}
 .sub-category-grid .sub-category-item,.manufacturer-grid .manufacturer-item{text-align:center;margin:10px;width:145px;height:180px;border:1px solid #eee;}
-.sub-category-grid .sub-category-item .title,.manufacturer-grid .manufacturer-item .title{text-align:center;font-weight:700;font-size:.9em;display:block;overflow:hidden;height:1.8em;padding:5px;}
+.sub-category-grid .sub-category-item .title,.manufacturer-grid .manufacturer-item .title{text-align:center;font-weight:700;font-size:.9em;display:block;overflow:hidden;padding:5px;}
 .sub-category-grid .sub-category-item .picture,.manufacturer-grid .manufacturer-item .picture{text-align:center;padding:10px 0;}
 .product-selectors{margin-bottom:10px;zoom:1;}
 .product-selectors:after{content:".";display:block;clear:both;height:0;font-size:0;line-height:0;visibility:hidden;}
